--- a/Calibration/Calibration/Calibration.vcxproj.filters
+++ b/Calibration/Calibration/Calibration.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="头文件\Sensor">
+      <UniqueIdentifier>{c04a517f-7fcc-46dc-9504-527d9bd6256e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\Sensor">
+      <UniqueIdentifier>{92d73610-f06b-4157-9a82-73cd55374e03}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CCalibration.cpp">
@@ -40,13 +46,13 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CSensor.cpp">
-      <Filter>源文件</Filter>
+      <Filter>源文件\Sensor</Filter>
     </ClCompile>
     <ClCompile Include="CCamera.cpp">
-      <Filter>源文件</Filter>
+      <Filter>源文件\Sensor</Filter>
     </ClCompile>
     <ClCompile Include="CProjector.cpp">
-      <Filter>源文件</Filter>
+      <Filter>源文件\Sensor</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -75,13 +81,13 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="CSensor.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="CCamera.h">
-      <Filter>头文件</Filter>
+      <Filter>头文件\Sensor</Filter>
     </ClInclude>
     <ClInclude Include="CProjector.h">
-      <Filter>头文件</Filter>
+      <Filter>头文件\Sensor</Filter>
+    </ClInclude>
+    <ClInclude Include="CCamera.h">
+      <Filter>头文件\Sensor</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
